# src/models/user.model.ts
@@ -1,0 +1,39 @@
+import mongoose, { Document, Model } from "mongoose";
+
+export interface IUser {
+  email: string;
+  password: string;
+  isVerified: boolean;
+}
+
+export interface IUserDocument extends Document {
+  email: string;
+  password: string;
+  isVerified: boolean;
+}
+
+export interface IUserModel extends Model<IUserDocument> {}
+
+const userSchema = new mongoose.Schema(
+  {
+    email: { type: String, required: true, unique: true },
+    password: { type: String, required: true },
+    isVerified: {
+      type: Boolean,
+      default: false,
+    },
+  },
+  {
+    toJSON: {
+      transform(doc, ret) {
+        delete ret.password;
+        delete ret.salt;
+        delete ret.__v;
+      },
+    },
+  }
+);
+
+const UserModel = mongoose.model<IUserDocument, IUserModel>("User", userSchema);
+
+export default UserModel;
